--- a/CSV2SQL/Properties/Resources.resx
+++ b/CSV2SQL/Properties/Resources.resx
@@ -1715,6 +1715,22 @@
   <data name="run" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\run.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ScriptTemplate" xml:space="preserve">
+    <value>import "Core"
+import "Sql"
+import "Threading"
+
+{
+    // instantiate loaded table
+    record = Record("##")
+    
+    // select row count
+    select countOf(*) as count from record
+    
+	// print the result
+    print("Total records: " + record.count)
+}</value>
+  </data>
   <data name="settings" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB
